# qBot

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake.yml
src/: dllmain.cpp  includes.hpp
src/clickbot/: clickbot.cpp  clickbot.hpp
src/gui/: gui.cpp  gui.hpp
src/hooks/: hooks.cpp  hooks.hpp
src/hooks/hooks/CCScheduler/: CCScheduler.cpp  CCScheduler.hpp
src/hooks/hooks/FPSBypass/: FPSBypass.cpp  FPSBypass.hpp
src/hooks/hooks/FPSMultiplier/: FPSMultiplier.cpp  FPSMultiplier.hpp
src/hooks/hooks/Keybinds/: dispatchKeyboardMSG.cpp  dispatchKeyboardMSG.hpp
src/hooks/hooks/PlayLayer/: PlayLayer.cpp  PlayLayer.hpp
src/hooks/hooks/Speedhack/: Speedhack.cpp  Speedhack.hpp
src/hooks/hooks/dispatchKeyboardMSG/: dispatchKeyboardMSG.cpp  dispatchKeyboardMSG.hpp
src/imguiExt/: imguiExt.cpp  imguiExt.hpp
src/qbot/: qbot.cpp  qbot.hpp
src/recorder/: recorder.cpp  recorder.hpp
